tests/conflict_markers_multiple.sy

start :: fn do
<<<<<<< HEAD
    print extern_test(4.0)
=======
    print extern_test(5.0)
>>>>>>> 2

<<<<<<< HEAD
    print extern_test(4.0)
=======
    print extern_test(5.0)
>>>>>>> 2
end
// error: Git conflict marker found at line 3
// error: Git conflict marker found at line 9
